Just loads of small things idk it looks good now